--- a/testc9.html
+++ b/testc9.html
@@ -5,5 +5,7 @@
     </head>
     <body>
         This is from C9
+        Check this link for help on commiting changes from c9 to git -  not really
+        <a href=http://stackoverflow.com/questions/7355277/how-to-push-to-github-from-cloud9>
     </body>
 </html>
