--- a/testc9.html
+++ b/testc9.html
@@ -7,5 +7,9 @@
         This is from C9
         Check this link for help on commiting changes from c9 to git -  not really
         <a href=http://stackoverflow.com/questions/7355277/how-to-push-to-github-from-cloud9>
+            It should be like this
+            git add files.html (if you have any files)
+            git -am 'commit message goes here'
+            git push
     </body>
 </html>
